Fix invisible account and messages in IE9

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -52,6 +52,7 @@ a, a:hover {
   border-radius: 2px;
   padding: 3px 8px 4px 10px;
   background-clip: border-box;
+  z-index: 1000; /* For < IE10 */
 }
 #account .dropdown-menu {
   margin: 10px -8px 0 0;
@@ -118,7 +119,7 @@ a, a:hover {
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
-  z-index: 1000; /* For < IE9 */
+  z-index: 1000; /* For < IE10 */
 }
 
 body {
@@ -266,6 +267,7 @@ label {
   position: absolute;
   right: 10px;
   top: 50px;
+  z-index: 1000; /* For < IE10 */
 }
 .new-messages ul {
   padding: 0;
